--- a/superset_text.yml
+++ b/superset_text.yml
@@ -26,3 +26,4 @@
  
  DB_CUSTOM_IMAGES:
      Apex: "http://localhost:9000/static/assets/images/apex-commandalkon.svg"
+     Cmic: "http://localhost:9000/static/assets/images/cmic.png"
